# uv-vs-nixpkgs

./: README.md  flake.nix  pyproject.toml
