[project]
name = "uv-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
conflicts = [
    [
      { package = "test1" },
      { package = "test2" },
    ],
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
test1 = { workspace = true }
test2 = { workspace = true }
